--- a/src/index.html
+++ b/src/index.html
@@ -15,79 +15,121 @@ title: Home
             </p>
         </div>
         <ul class="about-ul">
-            <li class="about-li about-li__git"><a href="https://github.com/evgeniaverbova" class="about-link"><img
-                        class="about-li_img" src="./assets/images/social/git.svg" alt=""></a></li>
-            <li class="about-li about-li__telegram"><a href="https://t.me/Jenia_Ver" class="about-link"><img
-                        class="about-li_img" src="./assets/images/social/telegram.svg" alt=""></a></li>
-            <li class="about-li about-li__twitter"><a
+            <li class="about-li about-li__git"><a target="_blank" href="https://github.com/evgeniaverbova"
+                    class="about-link"><img class="about-li_img" src="./assets/images/social/git.svg" alt=""></a></li>
+            <li class="about-li about-li__telegram"><a target="_blank" href="https://t.me/Jenia_Ver"
+                    class="about-link"><img class="about-li_img" src="./assets/images/social/telegram.svg" alt=""></a>
+            </li>
+            <li class="about-li about-li__twitter"><a target="_blank"
                     href="https://twitter.com/Zena87394143?t=Fcs-b9Xs_GTVT_8YKUpSQg&s=35" class="about-link"><img
                         class="about-li_img" src="./assets/images/social/twitter.svg" alt=""></a></li>
         </ul>
     </div>
 </section>
 <section class="expertise" id="skills">
-    <div class="mycontainer">
-        <ul class="percent">
+    <div class="mycontainer  expertise-container">
+        <ul class="percent col-10">
             <li class="percent-item"><span class="percent-span">BEGINNER</span></li>
             <li class="percent-item"><span class="percent-span">ELEMENTARY</span></li>
             <li class="percent-item"><span class="percent-span">INTERMEDIATE</span></li>
             <li class="percent-item"><span class="percent-span">ADVANCED</span></li>
             <li class="percent-item"><span class="percent-span">EXPERT</span></li>
         </ul>
-    <div class="skill">
-        <h3 class="skill-name">html</h3>
-        <ul class="skill-ul">
-            <li class="skill-li"><img class="degree" src="/assets/images/bike.png" alt=""></li>
-            <li class="skill-li"><img class="degree" src="/assets/images/bike.png" alt=""></li>
-            <li class="skill-li"><img class="degree" src="/assets/images/bike.png" alt=""></li>
-            <li class="skill-li"><img class="degree" src="/assets/images/bike.png" alt=""></li>
-            <li class="skill-li"><img class="degree" src="/assets/images/bike.png" alt=""></li>
 
-        </ul>
-    </div>
-    <div class="skill">
-        <h3 class="skill-name">scss</h3>
-        <ul class="skill-ul">
-            <li class="skill-li"><img class="degree" src="/assets/images/bike.png" alt=""></li>
-            <li class="skill-li"><img class="degree" src="/assets/images/bike.png" alt=""> </li>
-            <li class="skill-li"><img class="degree" src="/assets/images/bike.png" alt=""></li>
-            <li class="skill-li"><img class="degree" src="/assets/images/bike.png" alt=""></li>
-            <li class="skill-li"><img class="degree" src="/assets/images/bike.png" alt=""></li>
+        <div class="skill-inner">
+            <ul class="skill-ul">
+                <li class="skill-name">html</li>
+                <li class="skill-name">css/scss</li>
+                <li class="skill-name">Js</li>
+                <li class="skill-name">gulp</li>
+                <li class="skill-name">Keyframes</li>
+            </ul>
+            <ul class="degree-ul">
+                <li class="degree-li"><img class="degree" src="/assets/images/skills/bike.png" alt=""></li>
+                <li class="degree-li"><img class="degree" src="/assets/images/skills/bike.png" alt=""></li>
+                <li class="degree-li"><img class="degree" src="/assets/images/skills/bike.png" alt=""></li>
+                <li class="degree-li"><img class="degree" src="/assets/images/skills/bike.png" alt=""></li>
+                <li class="degree-li"><img class="degree" src="/assets/images/skills/bike.png" alt=""></li>
 
-        </ul>
-    </div>
-    <div class="skill">
-        <h3 class="skill-name">Keyframes</h3>
-        <ul class="skill-ul">
-            <li class="skill-li"><img class="degree" src="/assets/images/bike.png" alt=""></li>
-            <li class="skill-li"><img class="degree" src="/assets/images/bike.png" alt=""></li>
-            <li class="skill-li"><img class="degree" src="/assets/images/bike.png" alt=""></li>
-            <li class="skill-li skill-li-hidden"><img class="degree" src="/assets/images/bike.png" alt=""></li>
-            <li class="skill-li skill-li-hidden"><img class="degree" src="/assets/images/bike.png" alt=""></li>
+            </ul>
+            <ul class="degree-ul degree-ul-two">
+                <li class="degree-li"><img class="degree" src="/assets/images/skills/bike.png" alt=""></li>
+                <li class="degree-li"><img class="degree" src="/assets/images/skills/bike.png" alt=""></li>
+                <li class="degree-li  degree-li-hidden"><img class="degree" src="/assets/images/skills/bike.png" alt="">
+                </li>
+                <li class="degree-li"><img class="degree" src="/assets/images/skills/bike.png" alt=""></li>
+                <li class="degree-li"><img class="degree" src="/assets/images/skills/bike.png" alt=""></li>
+            </ul>
 
-        </ul>
-    </div>
-    <div class="skill">
-        <h3 class="skill-name">Js</h3>
-        <ul class="skill-ul">
-            <li class="skill-li"><img class="degree" src="/assets/images/bike.png" alt=""></li>
-            <li class="skill-li skill-li-hidden"><img class="degree" src="/assets/images/bike.png" alt=""></li>
-            <li class="skill-li skill-li-hidden"><img class="degree" src="/assets/images/bike.png" alt=""></li>
-            <li class="skill-li skill-li-hidden"><img class="degree" src="/assets/images/bike.png" alt=""></li>
-            <li class="skill-li skill-li-hidden"><img class="degree" src="/assets/images/bike.png" alt=""></li>
+            <ul class="degree-ul degree-ul-three">
+                <li class="degree-li"><img class="degree" src="/assets/images/skills/bike.png" alt=""></li>
+                <li class="degree-li"><img class="degree" src="/assets/images/skills/bike.png" alt=""></li>
+                <li class="degree-li  degree-li-hidden"><img class="degree" src="/assets/images/skills/bike.png" alt="">
+                </li>
+                <li class="degree-li"><img class="degree" src="/assets/images/skills/bike.png" alt=""></li>
+                <li class="degree-li"><img class="degree" src="/assets/images/skills/bike.png" alt=""></li>
+            </ul>
 
-        </ul>
-    </div>
-    <div class="skill">
-        <h3 class="skill-name">Bootstrap</h3>
-        <ul class="skill-ul">
-            <li class="skill-li"><img class="degree" src="/assets/images/bike.png" alt=""> </li>
-            <li class="skill-li"><img class="degree" src="/assets/images/bike.png" alt=""> </li>
-            <li class="skill-li"><img class="degree" src="/assets/images/bike.png" alt=""> </li>
-            <li class="skill-li"><img class="degree" src="/assets/images/bike.png" alt=""> </li>
-            <li class="skill-li skill-li-hidden"><img class="degree" src="/assets/images/bike.png" alt=""> </li>
+            <ul class="degree-ul degree-ul-four">
+                <li class="degree-li"><img class="degree" src="/assets/images/skills/bike.png" alt=""></li>
+                <li class="degree-li"><img class="degree" src="/assets/images/skills/bike.png" alt=""></li>
+                <li class="degree-li  degree-li-hidden"><img class="degree" src="/assets/images/skills/bike.png" alt="">
+                </li>
+                <li class="degree-li  degree-li-hidden"><img class="degree" src="/assets/images/skills/bike.png" alt="">
+                </li>
+                <li class="degree-li"><img class="degree" src="/assets/images/skills/bike.png" alt=""></li>
+            </ul>
 
-        </ul>
+            <ul class="degree-ul  degree-ul-five">
+                <li class="degree-li"><img class="degree" src="/assets/images/skills/bike.png" alt=""></li>
+                <li class="degree-li"><img class="degree" src="/assets/images/skills/bike.png" alt=""></li>
+                <li class="degree-li  degree-li-hidden"><img class="degree" src="/assets/images/skills/bike.png" alt="">
+                </li>
+                <li class="degree-li  degree-li-hidden"><img class="degree" src="/assets/images/skills/bike.png" alt="">
+                </li>
+                <li class="degree-li  degree-li-hidden"><img class="degree" src="/assets/images/skills/bike.png" alt="">
+                </li>
+            </ul>
+        </div>
+        <div class="skill-about">
+            <p class="skill-text col-6">
+                I have been working as a freelance designer and front-end developer since 2007.<br>
+                I’ve always been someone who has both a creative and a logical side.<br> When I discovered web design in
+                college, I realized it would be the perfect fit. I could use my creative side<br> to design and my
+                logical
+                side to code.
+            </p>
+            <img class="skill-image" src="/assets/images/12435.png" alt="">
+        </div>
+</section>
+
+<section class="portfolio" id="portfolio">
+    <div class="mycontainer">
+        <h2 class="portfolio-title">Portfolio</h2>
+        <div class="portfolio-inner">
+            <div class="portfolio-item col-3">
+                <a href="" class="portfolio-link">
+                    <img src="/assets/images/sites/909.png" alt="" class="portfolio-img">
+                </a>
+                <p class="portfolio-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae
+                    excepturi nisi, dolor eum odio ipsa sed, esse minima optio ea beatae reprehenderit reiciendis
+            </div>
+
+            <div class="portfolio-item col-3">
+                <a href="" class="portfolio-link">
+                    <img src="/assets/images/sites/202.png" alt="" class="portfolio-img  portfolio-img_sm">
+                </a>
+                <p class="portfolio-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae
+                    excepturi nisi, dolor eum odio ipsa sed, esse minima optio ea beatae reprehenderit reiciendis
+            </div>
+
+            <div class="portfolio-item col-3">
+                <a href="" class="portfolio-link">
+                    <img src="/assets/images/sites/707.png" alt="" class="portfolio-img">
+                </a>
+                <p class="portfolio-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae
+                    excepturi nisi, dolor eum odio ipsa sed, esse minima optio ea beatae reprehenderit reiciendis
+            </div>
+        </div>
     </div>
-</div>
 </section>
