--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@ title: Home
 </section>
 <section class="expertise" id="skills">
     <div class="mycontainer  expertise-container">
-        <ul class="percent col-10">
+        <ul class="percent">
             <li class="percent-item"><span class="percent-span">BEGINNER</span></li>
             <li class="percent-item"><span class="percent-span">ELEMENTARY</span></li>
             <li class="percent-item"><span class="percent-span">INTERMEDIATE</span></li>
@@ -92,7 +92,7 @@ title: Home
             </ul>
         </div>
         <div class="skill-about">
-            <p class="skill-text col-6">
+            <p class="skill-text">
                 I have been working as a freelance designer and front-end developer since 2007.<br>
                 I’ve always been someone who has both a creative and a logical side.<br> When I discovered web design in
                 college, I realized it would be the perfect fit. I could use my creative side<br> to design and my
@@ -107,7 +107,7 @@ title: Home
     <div class="mycontainer">
         <h2 class="portfolio-title">Portfolio</h2>
         <div class="portfolio-inner">
-            <div class="portfolio-item col-3">
+            <div class="portfolio-item">
                 <a href="" class="portfolio-link">
                     <img src="/assets/images/sites/909.png" alt="" class="portfolio-img">
                 </a>
@@ -115,7 +115,7 @@ title: Home
                     excepturi nisi, dolor eum odio ipsa sed, esse minima optio ea beatae reprehenderit reiciendis
             </div>
 
-            <div class="portfolio-item col-3">
+            <div class="portfolio-item">
                 <a href="" class="portfolio-link">
                     <img src="/assets/images/sites/202.png" alt="" class="portfolio-img  portfolio-img_sm">
                 </a>
@@ -123,13 +123,50 @@ title: Home
                     excepturi nisi, dolor eum odio ipsa sed, esse minima optio ea beatae reprehenderit reiciendis
             </div>
 
-            <div class="portfolio-item col-3">
+            <div class="portfolio-item">
                 <a href="" class="portfolio-link">
                     <img src="/assets/images/sites/707.png" alt="" class="portfolio-img">
                 </a>
                 <p class="portfolio-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae
                     excepturi nisi, dolor eum odio ipsa sed, esse minima optio ea beatae reprehenderit reiciendis
             </div>
+            <div class="portfolio-item">
+                <a href="" class="portfolio-link">
+                    <img src="/assets/images/sites/102.png" alt="" class="portfolio-img">
+                </a>
+                <p class="portfolio-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae
+                    excepturi nisi, dolor eum odio ipsa sed, esse minima optio ea beatae reprehenderit reiciendis
+            </div>
+
+            <div class="portfolio-item">
+                <a href="" class="portfolio-link">
+                    <img src="/assets/images/sites/505.png" alt="" class="portfolio-img  portfolio-img_sm">
+                </a>
+                <p class="portfolio-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae
+                    excepturi nisi, dolor eum odio ipsa sed, esse minima optio ea beatae reprehenderit reiciendis
+            </div>
+
+            <div class="portfolio-item">
+                <a href="" class="portfolio-link">
+                    <img src="/assets/images/sites/999.png" alt="" class="portfolio-img">
+                </a>
+                <p class="portfolio-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae
+                    excepturi nisi, dolor eum odio ipsa sed, esse minima optio ea beatae reprehenderit reiciendis
+            </div>
+        </div>
+    </div>
+</section>
+<section class="contact">
+    <div class="about-container mycontainer">
+        <div class="contact-left">
+            <p class="contact-text">
+                Join the mailing list or follow me on social media to receive occasional updates about new fonts,
+                freebies, giveaways, and sales!
+            </p>
+            <button class="contact-btn">Contact me</button>
+        </div>
+        <div class="contact-right">
+            <img src="/assets/images/contact/777.png" alt="" class="contact-img">
         </div>
     </div>
 </section>
